# harakiri

./: .gitmodules  README.md  cabal.project  harakiri.cabal  test.hk
lib/aarch64/linux/: lib.s
main/: Main.hs  OptionsParser.hs
src/: Harakiri.hs
src/Harakiri/: Compiler.hs  Expr.hs  IR.hs  Parser.hs  TypeCheck.hs  Utils.hs
src/Harakiri/Compiler/: Architecture.hs
src/Harakiri/Compiler/Architecture/: Aarch64.hs
src/Harakiri/Expr/: Interpreter.hs  Types.hs
src/Harakiri/IR/: Interpreter.hs  Translate.hs  Types.hs
tests/: Common.hs  InterpreterTests.hs  Main.hs  ParserTests.hs  TypeCheckTests.hs
