name:          harakiri
version:       0.1.0.0
synopsis:      Compiler for a harakiri language
description:   Compiler for a harakiri language
homepage:      https://github.com/cyberfined/harakiri
bug-reports:   https://github.com/cyberfined/harakiri/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       OtherLicense
license-file:  LICENSE
category:      Compilers
build-type:    Simple
cabal-version: >= 1.12
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/harakiri

executable harakiri
  main-is: Main.hs
  other-modules:
      OptionsParser
  hs-source-dirs:
      main
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , text >= 1.2 && < 2
    , optparse-applicative >= 0.16 && < 1
    , filepath >= 1.4 && < 2
    , process >= 1.6 && < 2
    , harakiri-lib
  default-language: Haskell2010
